CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(02_VERTEX_INDEX_BUFFER)

SET(Target 02_VertexIndexBuffer)

ADD_EXECUTABLE(${Target} main.cpp)

SET_PROPERTY(TARGET ${Target} PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET ${Target} PROPERTY CXX_STANDARD_REQUIRED ON)

TARGET_LINK_LIBRARIES(${Target} PUBLIC AGZVLab)
