CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(AGZ-VLAB)

SET(Target AGZVLab)

FILE(GLOB_RECURSE SRC
		"${PROJECT_SOURCE_DIR}/src/*.cpp"
		"${PROJECT_SOURCE_DIR}/include/agz/*.h"
		"${PROJECT_SOURCE_DIR}/include/agz/*.inl"
		"${PROJECT_SOURCE_DIR}/include/vma/*.h")

ADD_LIBRARY(${Target} STATIC ${SRC})

FOREACH(_SRC IN ITEMS ${SRC})
    GET_FILENAME_COMPONENT(SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/include/agz/vlab" "include" _GRP_PATH "${SRC}")
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/include/vma" "include/vma" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src" "src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

SET_PROPERTY(TARGET ${Target} PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET ${Target} PROPERTY CXX_STANDARD_REQUIRED ON)
	
TARGET_COMPILE_DEFINITIONS(${Target} PUBLIC GLFW_INCLUDE_VULKAN)
TARGET_COMPILE_DEFINITIONS(${Target} PUBLIC VULKAN_HPP_DISPATCH_LOADER_DYNAMIC)

TARGET_INCLUDE_DIRECTORIES(${Target} PUBLIC "${PROJECT_SOURCE_DIR}/include")

TARGET_LINK_LIBRARIES(${Target} PUBLIC AGZUtils glfw Vulkan::Vulkan)
TARGET_LINK_LIBRARIES(${Target} PUBLIC ${SHADERC_LIBRARIES})
